--- a/src/main/resources/templates/admin/admin_pending_def_approvals.html
+++ b/src/main/resources/templates/admin/admin_pending_def_approvals.html
@@ -99,7 +99,7 @@
 		<h1>Pending Project Definitions</h1>
 		<nav>
 			<ol class="breadcrumb">
-				<li class="breadcrumb-item"><a href="/bisag/admin/admin_pending_def_approvals">Project
+				<li class="breadcrumb-item"><a href="index.html">Project
 					Definition</a></li>
 				<li class="breadcrumb-item active">Pending Project Definitions</li>
 			</ol>
@@ -107,9 +107,7 @@
 	</div>
 	<input type="text" class="mb-4" id="searchInput"
 		   placeholder="Search...">
-	<!-- Success/Error Messages -->
-	<div class="alert alert-success" th:if="${successMessage}" th:text="${successMessage}"></div>
-	<div class="alert alert-danger" th:if="${errorMessage}" th:text="${errorMessage}"></div>
+
 	<table class="table datatable table-bordered">
 		<thead>
 		<tr>
@@ -121,8 +119,6 @@
 		</tr>
 		</thead>
 		<tbody>
-		<!-- ... Your existing HTML code ... -->
-
 		<tr th:each="group : ${groups}"
 			th:if="${group.projectDefinitionStatus == 'gapproved'}">
 			<form
@@ -135,12 +131,14 @@
 						   th:value="${group != null ? group.projectDefinition : ''}" /></td>
 				<td><input type="text" name="description"
 						   th:value="${group != null ? group.description : ''}" /></td>
-
-				<td><a
-						th:href="@{'/files/projectDefinitionDocument/' + ${group.projectDefinitionDocument}}"
-						target="_blank"> Open Document </a></td>
-
-				<td><input type="radio" name="apendingAns" value="approve"
+				<td>
+					<a th:href="@{/bisag/admin/viewProjectDefinition/{groupId}(groupId=${group.groupId})}"
+					   target="_blank" >
+						Open Document
+					</a>
+				</td>
+				<td>
+					<input type="radio" name="apendingAns" value="approve"
 						   id="approveRadio${group.groupId}"
 						   th:checked="${group.projectDefinitionStatus == 'approved'}" /> <label
 						for="approveRadio${group.groupId}">Approve</label> <input
@@ -152,8 +150,9 @@
 					<button type="submit" class="btn btn-primary"
 							onclick="return confirm('Are you sure ?')">Submit</button></td>
 			</form>
-		</tr>
 
+		</tr>
+		<!-- Row for Updating Definitions -->
 		<!-- ... Your existing HTML code ... -->
 
 		</tbody>
@@ -162,6 +161,7 @@
 	<!-- Include the footer fragment -->
 	<div th:replace="fragments/footerFragment :: footer"></div>
 </main>
+
 <!-- End #main -->
 
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
