--- a/src/main/resources/templates/fragments/internAsideFragment.html
+++ b/src/main/resources/templates/fragments/internAsideFragment.html
@@ -103,6 +103,12 @@
 						class="bi bi-circle"></i><span>Feedback Forms</span>
 				</a></li>
 			</ul>
+			<ul id="preject-def-nav" class="nav-content collapse "
+				data-bs-parent="#admin-nav">
+			<li><a th:href="@{/bisag/intern/announcement_alert}"> <i
+					class="bi bi-circle"></i><span>Announcements</span>
+			</a></li>
+				</ul>
 		</li>
 	</ul>
 
