--- a/src/main/resources/templates/under_process_application.html
+++ b/src/main/resources/templates/under_process_application.html
@@ -97,9 +97,6 @@
 			</a></li>
 		</ul>
 	</aside>
-
-
-
 	<!-- End Sidebar-->
 
 	<main id="main" class="main">
@@ -177,7 +174,7 @@
 		<!-- ======= Footer ======= -->
 		<footer id="footer" class="footer">
 			<div class="credits">
-				Designed by <a href="https://bootstrapmade.com/">Group-24RH4</a>
+				Designed by <a href="https://bootstrapmade.com/">Group-25RY1</a>
 			</div>
 		</footer>
 		<!-- End Footer -->
