--- a/src/main/resources/templates/admin/register_internn.html
+++ b/src/main/resources/templates/admin/register_internn.html
@@ -68,6 +68,10 @@
 <!--                                        etc.)</p>-->
 <!--                                </div>-->
                             </div>
+                            <div class="form-floating">
+                                <input type="text" class="form-control" id="securityPin" name="securityPin" required>
+                                <label for="securityPin">Security Pin</label>
+                            </div>
                             <h5 class="mt-4">College Information</h5>
                             <div class="form-floating">
                                 <select class="form-select" id="college" name="collegeName" required>
