--- a/src/main/resources/templates/fragments/asideFragment.html
+++ b/src/main/resources/templates/fragments/asideFragment.html
@@ -64,12 +64,12 @@
                     <i class="bi bi-circle"></i><span>Generate Credentials</span></a></li>
                 <li><a th:href="@{/bisag/admin/add_fields}"><i
                         class="bi bi-circle"></i><span>Add Fields</span></a></li>
+                <li><a th:href="@{/bisag/admin/undertaking}"><i
+                        class="bi bi-circle"></i><span>Add Undertaking</span></a></li>
                 <li><a th:href="@{/bisag/admin/cancellation_requests}"><i
                         class="bi bi-circle"></i><span>Cancellation Requests</span></a></li>
                 <li><a th:href="@{/bisag/admin/feedback_form_list}"><i
                         class="bi bi-circle"></i><span>Feedback Applications</span></a></li>
-                <li><a th:href="@{/bisag/admin/undertaking}"><i
-                        class="bi bi-circle"></i><span>Add Undertaking</span></a></li>
                 <li><a th:href="@{/bisag/admin/announcement}">
                         <i class="bi bi-circle"></i><span>Announcement Board</span></a></li>
 
@@ -196,7 +196,7 @@
                 <li class="nav-item">
                     <a class="nav-link collapsed" data-bs-target="#verification-nav" data-bs-toggle="collapse" href="#">
                         <i class="bi bi-menu-button-wide"></i>
-                        <span>Verification</span>
+                        <span>Intern Verification</span>
                         <i class="bi bi-chevron-down ms-auto"></i>
                     </a>
                     <ul id="verification-nav" class="nav-content collapse" data-bs-parent="#def-nav">
