--- a/src/main/resources/templates/internapply.html
+++ b/src/main/resources/templates/internapply.html
@@ -390,6 +390,12 @@ html, body {
                                            data-tooltip="Only JPG or JPEG files are allowed">
                                     <div class="tooltip" id="tooltip-icardImage"></div>
                                 </div>
+                                <div class="form-group mt-2" style="position: relative;">
+                                    <input type="text" class="form-control"
+                                           placeholder="Security Pin*" id="securityPin" name="securityPin"
+                                           required data-tooltip="Please enter your security pin">
+                                    <div class="tooltip" id="tooltip-securityPin"></div>
+                                </div>
                             </div>
                             <div class="text-center py-4">
                                 <button type="submit" class="btnRegister">
