--- a/src/main/resources/templates/guide/change_passwordd.html
+++ b/src/main/resources/templates/guide/change_passwordd.html
@@ -34,7 +34,7 @@
 </head>
 <body>
 <div th:replace="fragments/guideHeaderFragment :: header"></div>
-<div th:replace="fragments/guideAsideFragment :: aside"></div>
+<div th:replace="fragments/guideAside :: aside"></div>
 
 <main id="main" class="main">
     <div class="pagetitle">
