--- a/src/main/resources/templates/guide/pending_leaves.html
+++ b/src/main/resources/templates/guide/pending_leaves.html
@@ -130,8 +130,8 @@
                   </a>
                 </td>
                 <td th:text="${leave.internId}"></td>
-                <td th:text="${leave.fromDate}"></td>
-                <td th:text="${leave.toDate}"></td>
+                <td th:text="${#temporals.format(leave.fromDate, 'dd-MM-yyyy')}"></td>
+                <td th:text="${#temporals.format(leave.toDate, 'dd-MM-yyyy')}"></td>
                 <td th:text="${leave.subject}"></td>
                 <td th:text="${leave.leaveType}"></td>
                 <td th:text="${leave.status}"></td>
