--- a/src/main/resources/templates/hr/hr_verification_list.html
+++ b/src/main/resources/templates/hr/hr_verification_list.html
@@ -46,7 +46,7 @@
             </td>
             <td th:text="${verification.companyName}"></td>
             <td th:text="${verification.email}"></td>
-            <td th:text="${verification.verifiedDate}"></td>
+            <td th:text="${#dates.format(T(java.util.Date).from(verification.verifiedDate.toInstant()), 'dd-MM-yyyy HH:mm:ss')}"></td>
             <td th:text="${verification.remarks}"></td>
           </tr>
           </tbody>
